app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
// Issue.editors_letter styling

.span6.editors-letter {
	float:right;
	clear: none;
}

.editors-letter h3, .issue-articles-container h3 {
	margin-top: 0px;
	padding-top: 0px;
	color: @grayLight;
	line-height: 1em;
}

.editors-photo {
	float: right;
	margin: 0px 0px 10px 10px;
}

// Article styling

.image-uploader form {
	margin-bottom: 0px;
}

.article-title {
	padding-bottom: 0px;
	margin-top: 0px;
	border-bottom: 1px dashed #eeeeee;
}

.article-title h1 {
	/* padding-bottom: 0.25em; */
	margin-top: 0px;
}

.article-title h2 {
	font-weight: 600;
	font-size: 1.2em;
	line-height: 1.3em;
	color: @grayLight;
	/* padding-bottom: 0.75em; */
}

.article-title p {
	color: @grayLight;
}

.article-title .issue-cover {
	float: right;
	margin: 0px 0px 20px 20px;
	margin-top: -40px;
}

#myCarousel {
	.shadow;
}

.carousel-control {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.carousel-caption {
	padding: 10px 15px;
}

.modal {
	width: auto;
	max-width: 1000px;
}

.modal.fade.in {
	top: 2.5%;
}

.modal-body {
	//max-height: intrinsic;
	overflow-y: auto;
	padding-bottom: 0px;
}

.carousel-control {
	margin: 3px;
	border-width: 0px;
}

.modal .carousel-control {
	display: none;
}
.modal:hover .carousel-control {
	display: inherit;
}

.article-image-carousel {
	margin: 0px 13px 15px 0px;
	padding: 0px;
}

.all-article-images {
	text-align: center;
}

.all-article-images .image {
	display: inline-block;
}

.article-thumb {
	.shadow-light;
	.border-radius(2px);
	float: right;
	margin-left: 20px;
}

.article-image-top-right {
	width: 300px;
	.pull-right;
	margin-left: 20px;
}

.article-image-top-right .article-image-carousel {
	margin-right: 0px;
}

// Not used but the zooming on size change was nice.
.article-image-top {
	width: 100%;
	max-height: 400px;
	margin: 0 auto 0 auto;
	overflow: hidden;
	.shadow;
	margin-bottom: 1em;
	background-position-x: 25%;
	background-position-y: 50%;
}

.article-guest-pass {
	
}

.letters-box {
	.box;
}

.article-body {
/*
	font-family: @serifFontFamily;
	font-size: 21px;
	line-height: 32px;
*/
	font-size: @articleFontSize;
	line-height: @articleLineHeight;
}

.article-body p {
	margin-bottom: @articleParagraphMargin;
}

.article-body-letters h3 {
	color: @gray;
}

.article-source {
	display: none;
	margin-top: 1em;
}

.article-image {
	float: right;
	max-width: 340px;
	margin: 0px 0px 2em 2em;
}

.article-image img {
	.shadow;
	margin-bottom: 1em;
}

.new-image-caption {
	text-align: left;
	max-width: 280px;
	font-size: 0.9em;
	color: @gray;
}

.new-image-credit {
	text-align: left;
	font-size: 0.9em;
	margin-top: -3px;
	color: @grayLight;
	max-width: 280px;
}

.article-image-cartoon {
	margin-bottom: 1.5em;
}

.article-image-cartoon .new-image-credit, .article-image-cartoon .new-image-caption {
	max-width: 600px;
	margin-left: auto;
	margin-right: auto;
}

.article-image-cartoon img {
	.shadow;
	margin-bottom: 0.5em;
}

blockquote.pull-right, blockquote.pull-left, blockquote.pull- {
	border-right-style: none;
	border-left-style: none;
	color: @niRed;
	width: 30%;
	float: right;
	text-align: right;
}

blockquote.pull-right p, blockquote.pull-left p, blockquote.pull- p {
	margin-bottom: 0;
	font-weight: bold;
	font-size: 16px;
}

blockquote.pull-right, blockquote.pull- {
	padding: 0px;
	margin: 0px 0px 1em 1em;
}

blockquote.pull-left {
	padding: 0px;
	margin: 0px 1em 1em 0px;
	text-align: left;
	float: left;
}

.footnotes {
	padding: 1em;
	font-size: 0.9em;
	color: @gray;
}

.box {
	background-color: @boxBackgroundColour;
	padding: 1.5em 2em;
	margin: 2em 0 2em 0;
	.border-radius(5px);
}

.author-note {
	font-size: 0.9em;
	color: @gray;
}

.article-favourite {
	margin: -5px 0 0 10px;
}

.star-ratings-previous-year, .star-ratings-previous-year + dd {
	color: @grayLight;
	margin-top: -7px;
	margin-bottom: 20px;
}

ul.ui-autocomplete {
	position: absolute;
	list-style: none;
	margin: 0;
	padding: 0;
	border: solid 1px #999;
	cursor: default;
	li {
		background-color: #FFF;
		border-top: solid 1px #DDD;
		margin: 0;
		padding: 0;
	a {
		color: #000;
		display: block;
		padding: 3px;
	}
	a:hover, a:active {
		background-color: #0081C2;
	}
	}
}

.related-articles {
	border-top: 1px dashed #e5e5e5;
	padding: 1em;
	margin: 1em 0 -1.5em 0;
	.border-radius(5px);
}

.article-previous {
	float: left;
}

.article-next {
	float: right;
}

.article-related-by-theme {
	margin-top: 2em;
}

.article-related-by-theme h4 {
	color: @gray;
}


// PAGE styling (About, Help etc)

.help-list {
	.box;
	background-color:rgba(228, 225, 223, 0.5);
}

.help-body img {
	float: right;
	.shadow;
	margin: 0px 0px 1em 1em;
}

.quick-help {
	float:right;
	.box;
	margin-top: 0px;
}

.subscription-offer {
	.border-radius(5px);
	padding: 1em;
	margin-bottom: 24px;
	background-color: @grayLighter;
}

.subscription-offer h4 {
	font-size: 1.2em;
	margin-top: 0px;
	line-height: 1.3em;
}

.subscription-offer img {
	margin-bottom: 1em;
}

.subscription-buy-button {
	float: right;
}

.subscription-top-image {
	margin: 0 auto 20px auto;
	text-align: center;
}

.subscription-offer-list {
	font-size: 1.2em;
	width: 80%;
	margin: 0 auto 2em auto;
}

.subscription-offer-list li {
	margin-bottom: 1em;
	line-height: 1.5em;
	font-weight: bold;
}

.subscription-offer-list li span {
	font-weight: normal;
}

.subscribe-current-issue {
	float: right;
	margin: 0 0 1em 2em;
	max-width: 30%;
	.shadow;
}

// 404 error page styling

.fourohfour {
	background-color: #f5f5f5;
}

#error {
	width: 30%;
	min-width: 300px;
	margin: 1em auto 1em auto;
}

#error .brand {
	font-family: "Bodega";
	color: @niRed;
	font-size: 26px;
}



// Admin Settings

.admin-settings {
	margin-top: 2em;
}

.admin-settings label {
	font-size: 1.3em;
	font-weight: bold;
	color: @gray;
	padding-bottom: 5px;
}

.admin-settings .btn {
	margin-top: -9px;
}


// Sign-up page

.session-button {
	margin-top: 30px;
}
/* ... */

